fix: issue with override from user-agent dialog on mobile devices

--- a/packages/components/src/styles/dialog-init.scss
+++ b/packages/components/src/styles/dialog-init.scss
@@ -10,7 +10,7 @@ $backdrop-color-weak: color(
 		#{variables.$db-opacity-sm}
 );
 
-dialog {
+:is(dialog, .db-drawer) {
 	padding: 0;
 	margin: 0;
 	border: 0;
